[gd_scene load_steps=4 format=3 uid="uid://crc35ul2k5iwb"]

[ext_resource type="Texture2D" uid="uid://cbrn8x7iydw63" path="res://Assets/GUI/vertical-medium.png" id="1_51w3k"]
[ext_resource type="Script" path="res://ScoreService.gd" id="1_kqaug"]
[ext_resource type="PackedScene" uid="uid://bph1lnyqahu2x" path="res://dialog_box.tscn" id="3_s7tu2"]

[node name="ScoreService" type="Node2D"]
script = ExtResource("1_kqaug")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(243.69, 390.485)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_51w3k")

[node name="GridContainer" type="GridContainer" parent="."]
offset_left = 83.2445
offset_top = 165.3
offset_right = 401.244
offset_bottom = 248.3
theme_override_constants/h_separation = 50
theme_override_constants/v_separation = 10
columns = 2

[node name="Label" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Turns Taken:"

[node name="TurnsTaken" type="Label" parent="GridContainer"]
layout_mode = 2
text = "20"

[node name="Label3" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Bots Lost:"

[node name="NumDead" type="Label" parent="GridContainer"]
layout_mode = 2
text = "0"

[node name="Label4" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Boss Health:"

[node name="Boss Health" type="Label" parent="GridContainer"]
layout_mode = 2
text = "0"

[node name="Empty2" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Empty3" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Empty4" type="Label" parent="GridContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 0
text = "Robot"

[node name="Empty" type="Label" parent="GridContainer"]
layout_mode = 2
text = "Damage"

[node name="Bot Name" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Damage" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Bot Name2" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Damage2" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Bot Name3" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Damage3" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Bot Name4" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Damage4" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Bot Name5" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Damage5" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Bot Name6" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="Damage6" type="Label" parent="GridContainer"]
layout_mode = 2

[node name="SpLabel" type="Label" parent="GridContainer"]
modulate = Color(1, 0.843137, 0, 1)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "Skill Points
Earned"

[node name="SkillPointsEarned" type="Label" parent="GridContainer"]
modulate = Color(1, 0.843137, 0, 1)
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)

[node name="OkButton" type="Button" parent="."]
offset_left = 244.659
offset_top = 554.372
offset_right = 404.659
offset_bottom = 634.372
theme_override_font_sizes/font_size = 20
text = "OK"

[node name="Fader" type="ColorRect" parent="."]
visible = false
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0, 0, 0, 0)

[node name="Timer" type="Timer" parent="."]

[node name="DialogBox" parent="." instance=ExtResource("3_s7tu2")]
visible = false
